RESOLVED FIXED42994
WebKitTestRunner fails to load InjectedBundle.dll in the Debug_Internal configuration
https://bugs.webkit.org/show_bug.cgi?id=42994
Summary WebKitTestRunner fails to load InjectedBundle.dll in the Debug_Internal confi...
Adam Roben (:aroben)
Reported 2010-07-26 12:24:55 PDT
WebKitTestRunner fails to load InjectedBundle.dll in the Debug_Internal configuration
Attachments
Patch (1.70 KB, patch)
2010-07-26 12:27 PDT, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2010-07-26 12:27:47 PDT
Adam Roben (:aroben)
Comment 2 2010-07-27 08:27:06 PDT
WebKit Review Bot
Comment 3 2010-07-27 08:58:06 PDT
http://trac.webkit.org/changeset/64129 might have broken SnowLeopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.