Fix the path to InjectedBundle.dll in Debug_Internal builds

Fixes <http://webkit.org/b/42994> WebKitTestRunner fails to load
InjectedBundle.dll in the Debug_Internal configuration

Reviewed by Anders Carlsson.

* WebKitTestRunner/win/TestControllerWin.cpp:
(WTR::TestController::initializeInjectedBundlePath): Add the _debug
suffix only in Debug_All builds.

Canonical link: https://commits.webkit.org/54957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64129 268f45cc-cd09-0410-ab3c-d52691b4dbfc